--- a/src/keepass2android-appSdkStyle/Resources/layout/entry_edit.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/entry_edit.xml
@@ -48,11 +48,10 @@
         <LinearLayout
           android:id="@+id/user_section"
             style="@style/EntryEditSingleLine_container">
-            <ImageView
-                style="@style/EntryEditSingleLine_ImageView"
-                android:src="@drawable/baseline_account_circle_24" />
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/EntryEditSingleLine_TextInputLayout">
+                style="@style/EntryEditSingleLine_TextInputLayout"
+                app:startIconDrawable="@drawable/baseline_account_circle_24"
+                >
                 <EditText
                     style="@style/EntryEditSingleLine_EditText"
                     android:id="@+id/entry_user_name"
@@ -65,9 +64,6 @@
       <LinearLayout
         android:id="@+id/password_section"
             style="@style/EntryEditSingleLine_container">
-            <ImageView
-                style="@style/EntryEditSingleLine_ImageView"
-                android:src="@drawable/baseline_password_24" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -77,6 +73,8 @@
                     android:layout_height="wrap_content">
                     <com.google.android.material.textfield.TextInputLayout
                       android:layout_weight="1"
+                      app:startIconDrawable="@drawable/baseline_password_24"
+                      app:endIconMode="password_toggle"
                         style="@style/EntryEditSingleLine_TextInputLayout">
                         <EditText
                             android:id="@+id/entry_password"
@@ -89,51 +87,30 @@
                     </com.google.android.material.textfield.TextInputLayout>
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="fill_parent"
                         android:paddingBottom="12dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical ="true"
                         android:orientation="horizontal">
+                        
                         <Button
-                            style="?attr/materialIconButtonStyle"
-                            android:id="@+id/toggle_password"
-                            android:layout_width="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:paddingLeft="8dp"
-                            android:paddingRight="8dp"
-                            android:layout_height="fill_parent"
-                            app:icon="@drawable/baseline_visibility_24"
-                            />
-                        <ImageButton
                             android:id="@+id/generate_button"
-                            android:layout_gravity="center_vertical"
+                            style="?attr/materialIconButtonFilledStyle"
+                            app:icon="@drawable/add_key"
                             android:layout_width="wrap_content"
-                            android:layout_height="fill_parent"
-                            android:paddingLeft="8dp"
-                            android:paddingRight="8dp"
-                            android:src="@drawable/baseline_add_circle_outline_24"
+                            android:layout_height="wrap_content"
                              />
                     </LinearLayout>
                 </LinearLayout>
-                <EditText
-                    android:id="@+id/entry_confpassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="0dp"
-                    android:singleLine="true"
-                    android:inputType="textPassword"
-                    android:hint="confirm password"
-                  android:importantForAccessibility="no"/>
+
             </LinearLayout>
         </LinearLayout>
     <!-- URL -->
       <LinearLayout
         android:id="@+id/url_section"
             style="@style/EntryEditSingleLine_container">
-            <ImageView
-                style="@style/EntryEditSingleLine_ImageView"
-                android:src="@drawable/baseline_link_24" />
             <com.google.android.material.textfield.TextInputLayout
+              app:startIconDrawable="@drawable/baseline_link_24"
                 style="@style/EntryEditSingleLine_TextInputLayout">
                 <EditText
                     style="@style/EntryEditSingleLine_EditText"
@@ -147,10 +124,8 @@
       <LinearLayout
         android:id="@+id/comments_section"
             style="@style/EntryEditSingleLine_container">
-            <ImageView
-                style="@style/EntryEditSingleLine_ImageView"
-                android:src="@drawable/baseline_comment_24" />
             <com.google.android.material.textfield.TextInputLayout
+              app:startIconDrawable="@drawable/baseline_comment_24"
                 style="@style/EntryEditSingleLine_TextInputLayout">
                 <EditText
                     style="@style/EntryEditSingleLine_EditText"
@@ -177,11 +152,9 @@
                     android:orientation="vertical" />
               <Button
                 android:id="@+id/add_advanced"
-                android:background="?android:selectableItemBackground"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textAllCaps="true"
-    android:drawableLeft="@drawable/baseline_add_circle_outline_24"
+                style="?attr/materialButtonOutlinedStyle"
+                app:icon="@drawable/baseline_add_24"
+                    
     android:paddingLeft="8dp"
     android:layout_width="match_parent"
     android:layout_weight="1"
@@ -228,10 +201,9 @@
       <LinearLayout
         android:id="@+id/tags_section"
             style="@style/EntryEditSingleLine_container">
-            <ImageView
-                style="@style/EntryEditSingleLine_ImageView"
-                android:src="@drawable/baseline_label_24" />
+
             <com.google.android.material.textfield.TextInputLayout
+              app:startIconDrawable="@drawable/baseline_label_24"
                 style="@style/EntryEditSingleLine_TextInputLayout">
                 <EditText
                     style="@style/EntryEditSingleLine_EditText"
@@ -245,10 +217,8 @@
         <LinearLayout
             android:id="@+id/entry_override_url_container"
             style="@style/EntryEditSingleLine_container">
-            <ImageView
-                style="@style/EntryEditSingleLine_ImageView"
-                android:src="@drawable/baseline_link_24" />
             <com.google.android.material.textfield.TextInputLayout
+              app:startIconDrawable="@drawable/baseline_link_24"
                 style="@style/EntryEditSingleLine_TextInputLayout">
                 <EditText
                     style="@style/EntryEditSingleLine_EditText"
