--- a/src/keepass2android-appSdkStyle/Resources/layout/generate_password.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/generate_password.xml
@@ -206,36 +206,42 @@
           
             
             <Button
+              style="@style/Widget.Material3.Button.TextButton"        
                 android:id="@+id/btn_length6"
                 android:text="6"
                 android:layout_height="wrap_content"
                 android:layout_width="50sp"
         />
             <Button
+              style="@style/Widget.Material3.Button.TextButton"
               android:id="@+id/btn_length8"
               android:text="8"
               android:layout_height="wrap_content"
               android:layout_width="50sp"
               />
             <Button
+              style="@style/Widget.Material3.Button.TextButton"
               android:id="@+id/btn_length12"
               android:text="12"
               android:layout_height="wrap_content"
               android:layout_width="50sp"
                />
             <Button
+              style="@style/Widget.Material3.Button.TextButton"
               android:id="@+id/btn_length16"
               android:text="16"
               android:layout_height="wrap_content"
               android:layout_width="50sp"
               />
             <Button
+              style="@style/Widget.Material3.Button.TextButton"
              android:id="@+id/btn_length24"
              android:text="24"
              android:layout_height="wrap_content"
              android:layout_width="50sp"
              />
             <Button
+              style="@style/Widget.Material3.Button.TextButton"
               android:id="@+id/btn_length32"
               android:text="32"
               android:layout_width="50sp"
