--- a/src/keepass2android-appSdkStyle/Resources/layout/group_edit.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/group_edit.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:padding="16dp"
+    >
     <ImageButton
         android:id="@+id/icon_button"
         android:layout_width="64dp"
@@ -24,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/group_name"
         android:minWidth="100sp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
         android:text="@android:string/ok" />
     <Button
         android:id="@+id/cancel"
@@ -31,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/group_name"
         android:layout_toRightOf="@id/ok"
+        android:layout_marginTop="16dp"
         android:text="@android:string/cancel"
         android:minWidth="100sp" />
 </RelativeLayout>
