--- a/src/keepass2android-appSdkStyle/Resources/layout/EntryEditButtonAdd.axml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/EntryEditButtonAdd.axml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/EditEntryButton"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="-4dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:drawableLeft="@drawable/baseline_add_circle_outline_24" />
+    style="?attr/materialButtonOutlinedStyle"
+    app:icon="@drawable/baseline_add_circle_outline_24"
+     />
