--- a/src/keepass2android-appSdkStyle/Resources/layout/entry_edit_section.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/entry_edit_section.xml
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:paddingTop="1dip"
                 android:gravity="center_vertical"
                 android:layout_height="wrap_content">
 
   <Button
+    style="?attr/materialIconButtonStyle"
+    app:icon="@drawable/baseline_edit_24"
       android:id="@+id/edit_extra"
-      android:text="…"
-      android:layout_width="40dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:layout_marginRight="0dip"
@@ -30,20 +32,18 @@
           android:layout_marginRight="0dip"
 		 android:visibility="gone" />
 
-    <TextView
-          android:id="@+id/title"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginRight="0dip"
-        style="@style/EntryFieldHeader"
-		  />
-
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/value_container"
+      style="?attr/textInputOutlinedDenseStyle"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
       <EditText
           android:id="@+id/value"
-          android:hint="@string/field_value"
           android:inputType="textMultiLine"
           style="@style/EntryEditSingleLine_EditText"
           android:layout_marginRight="0dip" />
+            </com.google.android.material.textfield.TextInputLayout>
+>
     
     <CheckBox
         android:id="@+id/protection"
