--- a/src/keepass2android-appSdkStyle/Resources/layout/password.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/password.xml
@@ -2,8 +2,8 @@
 <keepass2android.FixedDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:fitsSystemWindows="true">
 <!-- activity view -->
     <keepass2android.MeasuringLinearLayout
@@ -17,12 +17,13 @@
                                                              android:id="@+id/main_content"
                                                              android:layout_width="match_parent"
                                                              android:layout_height="match_parent"
-                                                             android:layout_weight="1">
+                                                             android:layout_weight="1"
+                                                             android:fitsSystemWindows="true">
 
           <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
+            android:layout_height="@dimen/detail_backdrop_height"
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
 
@@ -30,9 +31,11 @@
               android:id="@+id/collapsing_toolbar"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              app:expandedTitleMarginEnd="64dp"
+              app:layout_scrollFlags="scroll|exitUntilCollapsed"
+              android:fitsSystemWindows="true"
               app:expandedTitleMarginStart="48dp"
-              app:layout_scrollFlags="scroll|exitUntilCollapsed">
+              app:expandedTitleMarginEnd="24dp"
+              app:expandedTitleMarginBottom="20sp">
 
               <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
                               android:layout_width="fill_parent"
@@ -43,25 +46,36 @@
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:scaleType="centerCrop"
-                  android:fitsSystemWindows="true"
                   android:src="@drawable/toolbar_bg"
                   app:layout_collapseMode="parallax" />
-                <TextView
-                  android:id="@+id/filename"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
+                <HorizontalScrollView
                   android:layout_alignParentBottom="true"
+                            
                   android:layout_marginBottom="0sp"
                   android:layout_marginLeft="48dp"
-                  android:textSize="10sp"
-                  android:text="/storage/emulated/0/keepass/keepass/database.kdbx" />
+                  android:layout_marginRight="8dp"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content">
+                           
+                  <TextView
+                    android:id="@+id/filename"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    
+                    android:singleLine="true"
+                    android:textSize="10sp"
+                    android:textColor="@color/md_theme_onSurface"
+                    android:text="/storage/emulated/0/keepass/keepass/database.kdbx" />
+
+                </HorizontalScrollView>
+
+
               </RelativeLayout>
 
                 <androidx.appcompat.widget.Toolbar
                   android:id="@+id/toolbar"
                   android:layout_width="match_parent"
                   android:layout_height="?attr/actionBarSize"
-                  android:layout_marginBottom="16sp"
                   app:layout_collapseMode="pin"/>
 
               </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -336,7 +350,7 @@
                     <View
                         android:id="@+id/spacing"
                         android:layout_width="fill_parent"
-                        android:layout_height="200dp"
+                        android:layout_height="300dp"
                         android:background="#0000" />
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
