--- a/src/keepass2android-app/Resources/layout/ftpcredentials.xml
+++ b/src/keepass2android-app/Resources/layout/ftpcredentials.xml
@@ -15,7 +15,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:text=""
+            android:text="ftp.dlptest.com"
 			      android:layout_weight="1"
             android:inputType="textWebEmailAddress"
 			android:hint="@string/hint_sftp_host" />
@@ -46,7 +46,7 @@
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:inputType="textWebEmailAddress"
-             android:text=""
+             android:text="dlpuser"
              android:hint="@string/hint_username" />
 
   <EditText
@@ -54,7 +54,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:text=""
+            android:text="rNrKYTX9g7z3RgJRmxWuGHbeu"
             android:singleLine="true"
             android:hint="@string/hint_pass" 
             android:importantForAccessibility="no"/>
