LoadDb and SaveDb respect the SyncInBackground preference

--- a/src/keepass2android-app/Resources/layout/password.xml
+++ b/src/keepass2android-app/Resources/layout/password.xml
@@ -318,6 +318,30 @@
 			          android:text="@string/help_quickunlock"
                       />
                   </LinearLayout>
+
+                    
+                    <LinearLayout
+                      android:id="@+id/sync_in_background_container"
+                      android:orientation="horizontal"
+                      android:layout_width="fill_parent"
+                      android:layout_height="wrap_content">
+
+                      <CheckBox
+                        android:id="@+id/sync_in_background"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/SyncOfflineCacheInBackground_title" />
+                      <keepass2android.views.Kp2aShortHelpView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/TextAppearance_Help_Dense"
+                      
+                        app:help_text="@string/SyncOfflineCacheInBackground_summary"
+                        app:title_text="@string/SyncOfflineCacheInBackground_title"
+                        android:text="@string/SyncOfflineCacheInBackground_summary"
+                      />
+                    </LinearLayout>
                   <LinearLayout
                     android:id="@+id/work_offline_container"
                     android:orientation="horizontal"
@@ -328,7 +352,7 @@
                           android:id="@+id/work_offline"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
-                          android:layout_marginTop="16dp"
+                          
                           android:text="@string/UseOfflineMode" />
                     <keepass2android.views.Kp2aShortHelpView
                       android:layout_width="wrap_content"
@@ -340,6 +364,7 @@
 			                android:text="@string/UseOfflineMode_Info"
                       />
                   </LinearLayout>
+
 
                   <Button
                         android:id="@+id/kill_app"
