disable password-based QuickUnlock when device is not protected by screen lock

--- a/src/keepass2android-app/Resources/layout/QuickUnlock.xml
+++ b/src/keepass2android-app/Resources/layout/QuickUnlock.xml
@@ -78,20 +78,21 @@ android:paddingLeft="16dp"
 android:paddingRight="16dp"
           android:paddingTop="16dp">
 
-
-        <TextView
-                android:id="@+id/QuickUnlock_label"
-                android:text="@string/QuickUnlock_label"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/filename_label"
-                android:textSize="14sp"
-                />
         
         <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:orientation="horizontal">
+          android:orientation="horizontal"
+          android:id="@+id/QuickUnlockForm">
+
+          <TextView
+            android:id="@+id/QuickUnlock_label"
+            android:text="@string/QuickUnlock_label"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/filename_label"
+            android:textSize="14sp"
+          />
 
           <EditText
             android:inputType="textPassword"
@@ -121,6 +122,60 @@ android:paddingRight="16dp"
 
         </LinearLayout>
 
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:background="@color/md_theme_secondaryContainer"
+          android:id="@+id/QuickUnlockBlocked"
+          android:padding="16dp"
+          android:layout_gravity="center">
+
+          <TextView
+            android:id="@+id/quick_unlock_blocked_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/password_based_quick_unlock_not_available"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:paddingBottom="8dp"/>
+
+          <TextView
+            android:id="@+id/alert_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/password_based_quick_unlock_not_available_text"
+            android:textSize="16sp"
+                            android:paddingBottom="8dp"/>
+          <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <Button  
+              android:id="@+id/QuickUnlock_buttonEnableLock"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center"
+              android:backgroundTint="@color/md_theme_secondary"
+              android:textColor="@android:color/white"
+              android:text="@string/enable_screen_lock"
+              android:fontFamily="sans-serif-medium"   />
+
+              <Button  
+              android:id="@+id/QuickUnlock_buttonCloseDb"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center"
+              android:backgroundTint="@color/md_theme_secondary"
+              android:textColor="@android:color/white"
+              android:fontFamily="sans-serif-medium"  
+              android:text="@string/QuickUnlock_lockButton" />
+            
+            </LinearLayout>
+            
+
+          </LinearLayout>
       
         <View
         android:id="@+id/spacing"
