improve Samba dialog. fix NoNet build

--- a/src/keepass2android-app/Resources/layout/smbcredentials.axml
+++ b/src/keepass2android-app/Resources/layout/smbcredentials.axml
@@ -3,8 +3,12 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:padding="12dp"
     android:layout_margin="12dip"
     >
+    <TextView android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:text="@string/hint_smb_credentials" />
   <LinearLayout
     android:orientation="horizontal"
     android:layout_width="fill_parent"
