--- a/src/keepass2android-app/Resources/layout/QuickUnlock.xml
+++ b/src/keepass2android-app/Resources/layout/QuickUnlock.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
-android:fitsSystemWindows="true">
+android:fitsSystemWindows="false">
 <keepass2android.MeasuringLinearLayout
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
@@ -17,7 +17,7 @@ android:fitsSystemWindows="true">
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="1"
-          android:fitsSystemWindows="true">
+          android:fitsSystemWindows="false">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@ android:fitsSystemWindows="true">
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layout_scrollFlags="scroll|exitUntilCollapsed"
-          android:fitsSystemWindows="true"
+          android:fitsSystemWindows="false"
           app:expandedTitleMarginStart="16dp"
           app:expandedTitleMarginEnd="24dp"
           app:expandedTitleMarginBottom="20sp">
