--- a/src/keepass2android-app/Resources/layout/generate_password.xml
+++ b/src/keepass2android-app/Resources/layout/generate_password.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+               android:id="@+id/main_container"
                 android:layout_width="fill_parent"
                 android:background="?android:attr/colorBackground"
                 android:layout_height="fill_parent">
@@ -322,4 +323,3 @@
     </ScrollView>
 
   </RelativeLayout>
-
